# ot-harjoitustyo

./: README.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL.md  monopoli.md
pygame-chess/: .pylintrc  alembic.ini  pyproject.toml  tasks.py
pygame-chess/alembic/: env.py
pygame-chess/alembic/versions/: 835f9b6bd9f0_create_fen_table.py
pygame-chess/src/: board.py  clock.py  config.py  database_connection.py  game_loop.py  index.py  initialize_database.py  load_image.py  models.py  renderer.py
pygame-chess/src/data/: fen.sqlite
pygame-chess/src/repositories/: fen_repository.py
pygame-chess/src/services/: chess_service.py
pygame-chess/src/sprites/: bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
pygame-chess/src/tests/: chess_service_test.py  conftest.py  fen_repository_test.py  pieces_test.py
pygame-chess/src/ui/: board.py  board_view.py  game_loop.py  gui_elements.py  load_image.py  renderer.py
